--- a/crates/iroha_crypto/Cargo.toml
+++ b/crates/iroha_crypto/Cargo.toml
@@ -11,7 +11,7 @@ license.workspace = true
 workspace = true
 
 [features]
-default = ["std", "rand"]
+default = ["rand"]
 # Enable static linkage of the rust standard library.
 # Please refer to https://docs.rust-embedded.org/book/intro/no-std.html
 std = [
@@ -65,13 +65,26 @@ sha2 = { version = "0.10.8", default-features = false }
 hkdf = { version = "0.12.4", default-features = false }
 w3f-bls = { version = "0.1.4", default-features = false }
 
-signature = { version = "2.2.0", default-features = false, features = ["alloc"] }
-ed25519-dalek = { version = "2.1.1", default-features = false, features = ["alloc", "rand_core", "zeroize"] }
+signature = { version = "2.2.0", default-features = false, features = [
+    "alloc",
+] }
+ed25519-dalek = { version = "2.1.1", default-features = false, features = [
+    "alloc",
+    "rand_core",
+    "zeroize",
+] }
 curve25519-dalek = { version = "4.1.3", default-features = false }
-x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets"] }
+x25519-dalek = { version = "2.0.1", default-features = false, features = [
+    "static_secrets",
+] }
 
-rand = { workspace = true, default-features = false, features = ["std_rng", "alloc"] }
-rand_core = { version = "0.6.4", default-features = false, features = ["alloc"] }
+rand = { workspace = true, default-features = false, features = [
+    "std_rng",
+    "alloc",
+] }
+rand_core = { version = "0.6.4", default-features = false, features = [
+    "alloc",
+] }
 rand_chacha = { version = "0.3.1", default-features = false }
 
 
@@ -82,7 +95,11 @@ aead = { version = "0.5.2", default-features = false, features = ["alloc"] }
 chacha20poly1305 = { version = "0.10.1", default-features = false }
 
 elliptic-curve = { version = "0.13.8", default-features = false }
-k256 = { version = "0.13.3", default-features = false, features = ["alloc", "ecdsa", "sha256"] }
+k256 = { version = "0.13.3", default-features = false, features = [
+    "alloc",
+    "ecdsa",
+    "sha256",
+] }
 
 [dev-dependencies]
 hex-literal = { workspace = true }
